--- a/src/pug/hamburger.pug
+++ b/src/pug/hamburger.pug
@@ -1,7 +1,7 @@
 .hamburger-btn
   .hamburger-btn__item
     .hamburger-btn__item-string
-.hamnurger-menu
-  .hamnurger-menu__container
+.hamburger-menu
+  .hamburger-menu__container
     include menu  
     include social
