--- a/src/pug/skills/skills.pug
+++ b/src/pug/skills/skills.pug
@@ -1,4 +1,5 @@
 section.skills
+  a(name="sec3")#sec3
   .container.skills__container
     .skills__desc
       h4.skills__desc-title Чем я могу быть полезен вам
