--- a/src/pug/works/works.pug
+++ b/src/pug/works/works.pug
@@ -1,4 +1,5 @@
 section.works
+  a(name="sec4")#sec4
   .container.works__container
     h3.works__title.h3-title Мои работы
     #works-slider-component
