--- a/src/styles/blocks/diagram.pcss
+++ b/src/styles/blocks/diagram.pcss
@@ -27,8 +27,8 @@
 
 .percentage{
   display: block;
-  width: 136px;
-  height: 136px;
+  width: 136Px;
+  height: 136Px;
   transform: rotate(-180deg);
 
   &__name{
