--- a/src/styles/blocks/about/about.pcss
+++ b/src/styles/blocks/about/about.pcss
@@ -1,8 +1,11 @@
 .about{
   background: url('../images/content/about-bg.jpg') center center /cover no-repeat;
+  height: 100vh;
+  min-height: 750px;
+
 
   &__container{
-    min-height: 750px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
