--- a/src/styles/blocks/works-slider.pcss
+++ b/src/styles/blocks/works-slider.pcss
@@ -136,7 +136,7 @@
 
     &-tags{
       display: flex;
-      justify-content: space-around;
+      flex-wrap: wrap;
 
       &-item{
         background-color: #f3f5f9;
@@ -145,7 +145,8 @@
         line-height: 45px;
         font-weight: 600;
         padding: 0 20px;
-        margin-left: 2px;
+        margin-left: 10px;
+        margin-top: 5px;
         border-radius: 25px;
 
         &:first-child{
