parallax img mobile load fixed

--- a/src/pug/hero/parallax.pug
+++ b/src/pug/hero/parallax.pug
@@ -1,16 +1,40 @@
 .parallax
   .parallax__layer(data-speed="0")
-    +image('content/parallax/1.png', 'parallax__img')
+    img.parallax__img(
+      srcset="src/images/content/parallax/1.png 3660w, 768w"
+      sizes="(max-width: 768px) 0px, 3660px"
+      src=""
+      )
   .parallax__layer(data-speed=".3")
-    +image('content/parallax/2.png', 'parallax__img')
+    img.parallax__img(
+      srcset="src/images/content/parallax/2.png 3660w, 768w"
+      sizes="(max-width: 768px) 0px, 3660px"
+      src=""
+      )
   .parallax__layer
     .parallax__title
       h1.owner__title Андрей Мартемьянов
   .parallax__layer(data-speed=".4")
-    +image('content/parallax/3.png', 'parallax__img')
+    img.parallax__img(
+      srcset="src/images/content/parallax/3.png 3660w, 768w"
+      sizes="(max-width: 768px) 0px, 3660px"
+      src=""
+      )
   .parallax__layer(data-speed=".8")
-    +image('content/parallax/4.png', 'parallax__img')
+    img.parallax__img(
+      srcset="src/images/content/parallax/4.png 3660w, 768w"
+      sizes="(max-width: 768px) 0px, 3660px"
+      src=""
+      )
   .parallax__layer
-    +image('content/parallax/5.png', 'parallax__img')
+    img.parallax__img(
+      srcset="src/images/content/parallax/5.png 3660w, 768w"
+      sizes="(max-width: 768px) 0px, 3660px"
+      src=""
+      )
   .parallax__layer
-    +image('content/parallax/6.png', 'parallax__img')
+    img.parallax__img(
+      srcset="src/images/content/parallax/6.png 3660w, 768w"
+      sizes="(max-width: 768px) 0px, 3660px"
+      src=""
+      )
