--- a/src/pug/form.pug
+++ b/src/pug/form.pug
@@ -1,18 +1,31 @@
-form.form
-  h3.form__title Связаться со мной
-  .form__data
-    label(for="name").form__label
-      +icon('user', 'form__label-pic')
-      h6.form__label-title Введите ваше имя
-      input(type="text" placeholder="Ковальчук Дмитрий" required).form__label-input#name
-    label(for="email").form__label
-      +icon('envelope', 'form__label-pic')
-      h6.form__label-title Введите ваш email
-      input(type="email" placeholder="loftschool@study.com" required).form__label-input#email
-  label(for="letter").form__label.form__label--letter
-    +icon('message', 'form__label-pic')
-    h6.form__label-title Сообщение к письму
-    textarea(placeholder="Требуется ваша помощь в создании сайта. \n Интересуют сроки и цена вопроса" required).form__label-textarea#letter
-  label(for="submit").form__btn
-    input(type="submit").visuallyHidden
-    button(href="#").form__btn-item отправить
+script(type="text/x-template")#contacts-form-template
+  form.form(@submit.prevent="sendMessage")
+    h3.form__title Связаться со мной
+    .form__data
+      label(:class="{'error' : validation.firstError('user.name')}").form__label
+        +icon('user', 'form__label-pic')
+        h6.form__label-title Введите ваше имя
+        input(type="text" placeholder="Ковальчук Дмитрий" name="name" v-model="user.name").form__label-input
+        .form-error
+          error-tooltip(
+              :errorText="validation.firstError('user.name')"
+            )
+      label(:class="{'error' : validation.firstError('user.email')}").form__label
+        +icon('envelope', 'form__label-pic')
+        h6.form__label-title Введите ваш email
+        input(type="text" placeholder="loftschool@study.com" name="email" v-model="user.email").form__label-input
+        .form-error
+          error-tooltip(
+              :errorText="validation.firstError('user.email')"
+            )
+    label(:class="{'error' : validation.firstError('user.message')}").form__label.form__label--letter
+      +icon('message', 'form__label-pic')
+      h6.form__label-title Сообщение к письму
+      textarea(placeholder="Требуется ваша помощь в создании сайта. \n Интересуют сроки и цена вопроса" name="message" v-model="user.message").form__label-textarea
+      .form-error
+          error-tooltip(
+              :errorText="validation.firstError('user.message')"
+            )
+    label(for="submit").form__btn
+      input(type="submit").visuallyHidden
+      button(href="#").form__btn-item отправить
