--- a/src/admin/styles/aboutAdmin.module.pcss
+++ b/src/admin/styles/aboutAdmin.module.pcss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.pcss";
+
 .about{
     display: block;
     padding: 0 2.5%;
@@ -135,6 +137,10 @@
                     grid-template-columns: 1fr 90px 30px 30px;
                     line-height: 32px;
 
+                    @include tablets{
+                      grid-template-columns: 40% 30% 15% 15%;
+                    }
+
                     input:read-only{
                       border: none;
                     }
@@ -243,6 +249,9 @@
                     display: block;
                     position: relative;
                     width: 25%;
+                    @include tablets{
+                      width: unset;
+                    }
                     &:after{
                       position: absolute;
                       display: block;
@@ -258,7 +267,11 @@
 
                     &__input{
                       height: 100%;
-                      padding: 0 10px;
+                      padding: 0 8Px;
+                      
+                      @include tablets{
+                        padding: 0 4Px;
+                      }
                     }
                   }
 
