--- a/src/admin/styles/tabsAdmin.module.pcss
+++ b/src/admin/styles/tabsAdmin.module.pcss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.pcss";
+
 .tabs{
   background-color: #fff;
   width: 100%;
@@ -10,6 +12,9 @@
       border-bottom: 3px solid transparent;
       transition: .3s;
       text-align: center;
+      @include phones {
+        width: 100%;
+      }
       &:hover{
         color: #5500f2;
         border-color: #5500f2;
