--- a/src/admin/styles/about/aboutContentItemHead.pcss
+++ b/src/admin/styles/about/aboutContentItemHead.pcss
@@ -22,13 +22,12 @@
 }
 
 .skills-block__btn{
+  cursor: pointer;
   margin-left: auto;
   margin-right: 19px;
-}
-
-.skills-block__btn-item{
   width: 20px;
   height: 20px;
+  border: none;
   background: svg-load("tick.svg", fill="#00d70a", width="15px", height="15px") center center no-repeat;
   transition: .3s;
   &:hover{
